	system() with intern=TRUE or show.output.on.console=TRUE in
	Rgui) it is now possible to interrupt the command and the Rgui
	console will be responsive whilst it is running (and R will
	take up far less of the CPU).  (Probably also fixes PR#7634.)

    o	menu.ttest2() in example package 'windlgs' was broken.

    o	CHM help is now converted with support for the \encoding{} section.



		CHANGES IN R VERSION 2.4.1
		
UNCATEGORIZED

    o	Inno Setup >= 5.1.7 is now required to build the installer.

    o	Reverted 2.4.0 change that required case-sensitive specification of
	commands to R CMD.

    o	The Simplified Chinese menu messages were in the wrong format,
	causing Rgui to crash on startup. (PR#9277)

    o	Menu messages are now available in a Spanish translation.

    o	The pointsize of fonts in the windows() graphics device may now
	be set to any positive integer.

    o	Building customized installers failed because the startup
	options weren't being handled properly.

    o	If Rconsole settings were such that R could not start properly,
	it crashed.  It now suggests starting with the --vanilla
	option, which now does not load Rconsole.  Additionally, an
	option --no-Rconsole has been added for completeness and
	debugging.

    o	shell.exec() now gives an error and a reason when it fails
	(rather than continuing silently as before).

    o	R CMD SHLIB again uses PKG_LIBS in files Makevars[.win] (it did
	not in R 2.4.0).



		CHANGES IN R VERSION 2.4.0
		
UNCATEGORIZED

    o	The language for menus and messages can be set in the 'Rconsole'
	file and (for future messages/sessions) from the GUI
	preferences.

    o	The initial setting for console buffering can be set in the
	'Rconsole' file and (for future sessions) from the GUI
	preferences.

    o	The installer can set defaults for MDI/SDI display, help style,
	and use of the --internet2 startup option.  Custom builds of R
	can change these defaults.  The standard build now defaults to
	CHM help.
